# chainlink-hackathon-2023

./: .gitignore  .gitmodules  README.md  all-in-one.sh
circom/: README.md  package-lock.json  package.json
circom/circuits/: batch_ecdsa_compact.circom  verify_16.circom
circom/circuits/ecdsa/: eth_addr.circom
circom/scripts/: wasm_build.sh
circom/test/: input_1.json
data-stream-parser/: Cargo.toml  data_stream_resp_example.json  prices.json
data-stream-parser/examples/: generate_circom_ecdsa_input.rs
data-stream-parser/src/: lib.rs  main.rs
data-stream-parser/src/chainlink/: client.rs  mod.rs  report.rs
data-stream-parser/src/circom/: batch_input.rs  mod.rs  u256.rs  utils.rs
preprocessor/: Cargo.toml
preprocessor/examples/: encode_circom_ecdsa.rs  generate_circom_ecdsa_input.rs
preprocessor/src/circom/: input.rs  mod.rs  u256.rs
preprocessor/src/circom/tests/: batch_input.json  batch_input2.json
sol_verifier/: README.md  hardhat.config.js  package-lock.json  package.json
sol_verifier/contracts/: DApp.sol  Verifier.sol
sol_verifier/test/: DApp.js  proof_input.json  reports.json
ui/: package-lock.json  package.json
ui-command/: README.md  input.json  proof.json  public.json  reports.json
ui/src/: App.css  App.tsx
ui/src/components/BuildingOrSolidity/: index.tsx
ui/src/components/Fold/: index.tsx
ui/src/components/Pull/: index.tsx
