[package]
name = "data-stream-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.28.0", features = [
    "global-context",
    "rand",
    "hashes-std",
    "recovery",
] }
hex = "0.4.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha256 = "1.4.0"
rand = "0.8.5"
k256 = { version = "0.13.2", features = ["arithmetic"] }
num-bigint = "0.4.4"
sha3 = "0.10.8"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
sha2 = "0.10.8"
hmac = "0.12.1"
alloy-sol-types = "0.5.0"
alloy-primitives = "0.5.0"
